--- a/pages/orders.html
+++ b/pages/orders.html
@@ -24,7 +24,7 @@
         </li>
     </ul>
     <h1>Orders</h1>
-    <a href="/pages/Products.html">Products</a>
+    <a href="/pages/products.html">Products</a>
 </body>
 
 </html>
